objects/Overall_Performance_Evaluation__c.object
<CustomObject>
    <description>Store info for particular Performance Period Total Bonus for Performance Metric calculation.( Not created by appirio).</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Overall Performance Evaluations</relationshipLabel>
        <relationshipName>Overall_Performance_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Metric</label>
        <referenceTo>Performance_Metric__c</referenceTo>
        <relationshipLabel>Overall Performance Evaluations</relationshipLabel>
        <relationshipName>Overall_Performance_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Memo__c</fullName>
        <label>Total Credit Memo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Incentive__c</fullName>
        <label>Total Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Overall Performance Evaluation</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Overall Performance Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overall Performance Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>